# sqlx_playground

./: Cargo.toml
migrations/: 20210325084711_table_setup.sql
src/: main.rs
