[package]
name = "sqlx_playground"
version = "0.1.0"
authors = ["Alexandru Vulpe <alexandru.vulpea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
sqlx = {version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "migrate", "offline"]}
dotenv = "0.15.0"
